--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FitFlex</title>
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -556,3 +556,4 @@
     </footer>
   </body>
 </html>
+
