--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitFlex</title>
+    <link rel="icon" type="image/png" href="Untitled design.png">
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -556,4 +557,5 @@
     </footer>
   </body>
 </html>
+
 
