--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitFlex</title>
-    <link rel="icon" type="image/png" href="Untitled design.png">
+    <link rel="icon" type="image/png" href="Untitled design.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,8 +33,10 @@
 
   <body>
     <header>
-      <div class="logo" id="logo">FitFlex</div>
-
+      <div class="left-bar">
+        <img src="Untitled design.png" alt="">
+      <p class="logo" id="logo">FitFlex</p>
+</div>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -42,7 +44,7 @@
           <li><a href="#about">About</a></li>
         </ul>
       </nav>
-      <div class="left-bar">
+      <div class="right-bar">
         <div class="search-bar">
           <input type="text" placeholder="Search" />
           <button class="fas fa-search"></button>
@@ -557,5 +559,3 @@
     </footer>
   </body>
 </html>
-
-
