--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <body>
     <header>
       <div class="left-bar">
-        <img src="Untitled design.png" alt="">
-      <p class="logo" id="logo">FitFlex</p>
-</div>
+        <img src="Untitled design.png" alt="" />
+        <p class="logo" id="logo">FitFlex</p>
+      </div>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -552,8 +552,11 @@
     </section>
     <hr />
     <footer>
-      <div class="logo footer-logo" id="logo">FitFlex</div>
-      <div class="copyright">
+      <div class="left-bar">
+        <img src="uyfjg.png" alt="" />
+        <p class="logo footer-logo" id="logo">FitFlex</p>
+      </div>
+        <div class="copyright">
         <p>Copyrights @ Mahmoud Khalil</p>
       </div>
     </footer>
